--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-device": "~5.2.1",
     "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "5.1.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "recoil": "^0.7.7",
+    "swr": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
